# cookiecutter-cmake

./: CMakeLists.txt  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: CMakeLists.txt
